--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,57 @@ YOUR STYLES
 title {
     font-size: 100px;
 }
-li {
-    width: 20px;
+
+img {
+    display: block;
+    width: 150px;
+    height:150px;
+    background: white;
+    margin: auto;
 } 
+.topimg {
+    width: 100%;
+    height: 300px;
+    
+}
+.me {
+    width: 20%;
+    height: 20%;
+}
+body {
+    background: black;
+}
+
+h1, h3, p, title  {
+    color: white;
+    text-align: center;
+    width: 400px;
+    margin: auto;
+}
+h3 {
+    color: yellow;
+}
+head, h1 {
+    font-size: 630%;
+    width: 600px;
+    position: absolute;
+    top: 165px; 
+    margin: auto;
+    font-family: 'pacifico', cursive;
+    color: silver;
+}
+html {
+    margin: 0 auto;
+}
+li {
+    float: left;
+    padding: 10px;
+    width: 200px;
+    margin: 0 auto; 
+    
+}
+
+}
 
 
 /********************
