--- a/css/styles.css
+++ b/css/styles.css
@@ -3,7 +3,9 @@ YOUR STYLES
 *******************/
 
 title {
+    position: absolute;
     font-size: 100px;
+    top: 0px;
 }
 
 img {
@@ -15,22 +17,28 @@ img {
 } 
 .topimg {
     width: 100%;
-    height: 300px;
+    height: 400px;
+    display: inline-block;
+   
     
 }
 .me {
-    width: 20%;
-    height: 20%;
+    width: 40%;
+    display: block;
+    height: 370px;
+    position: absolute;
+    top: 0px;
 }
 body {
-    background: black;
+    background-image: url("/img/wild_oliva.png");
 }
 
 h1, h3, p, title  {
     color: white;
     text-align: center;
-    width: 400px;
+    width: 900px;
     margin: auto;
+    font-size: 30px;
 }
 h3 {
     color: yellow;
@@ -38,8 +46,9 @@ h3 {
 head, h1 {
     font-size: 630%;
     width: 600px;
+    top: -45px;
+    left: 700px;
     position: absolute;
-    top: 165px; 
     margin: auto;
     font-family: 'pacifico', cursive;
     color: silver;
@@ -50,7 +59,7 @@ html {
 li {
     float: left;
     padding: 10px;
-    width: 200px;
+    width: 260px;
     margin: 0 auto; 
     
 }
