--- a/css/styles.css
+++ b/css/styles.css
@@ -16,18 +16,19 @@ img {
     margin: auto;
 } 
 .topimg {
-    width: 100%;
-    height: 400px;
+    width: 1500px;
+    height: 300px;
     display: inline-block;
    
     
 }
 .me {
-    width: 40%;
+    width: 260px;
     display: block;
-    height: 370px;
+    height: 300px;
     position: absolute;
-    top: 0px;
+    top: 70px;
+    padding: 10px;
 }
 body {
     background-image: url("/img/wild_oliva.png");
@@ -44,10 +45,10 @@ h3 {
     color: yellow;
 }
 head, h1 {
-    font-size: 630%;
-    width: 600px;
-    top: -45px;
-    left: 700px;
+    font-size: 900%;
+    width: 900px;
+    top: 200px;
+    left: 400px;
     position: absolute;
     margin: auto;
     font-family: 'pacifico', cursive;
