--- a/css/styles.css
+++ b/css/styles.css
@@ -17,17 +17,17 @@ img {
 } 
 .topimg {
     width: 1500px;
-    height: 300px;
+    height: 200px;
     display: inline-block;
    
     
 }
 .me {
-    width: 260px;
+    width: 160px;
     display: block;
-    height: 300px;
+    height: 180px;
     position: absolute;
-    top: 70px;
+    top: 0px;
     padding: 10px;
 }
 body {
@@ -37,7 +37,7 @@ body {
 h1, h3, p, title  {
     color: white;
     text-align: center;
-    width: 900px;
+    width: 1200px;
     margin: auto;
     font-size: 30px;
 }
@@ -45,14 +45,19 @@ h3 {
     color: yellow;
 }
 head, h1 {
-    font-size: 900%;
+    font-size: 1100%;
     width: 900px;
-    top: 200px;
-    left: 400px;
+    top: -45px;
+    left: 200px;
     position: absolute;
     margin: auto;
     font-family: 'pacifico', cursive;
-    color: silver;
+    color: whitesmoke;
+    opacity: 0.4;
+    animation-name: pulse;
+    animation-duration: 2s;
+    
+    
 }
 html {
     margin: 0 auto;
@@ -62,11 +67,95 @@ li {
     padding: 10px;
     width: 260px;
     margin: 0 auto; 
+    animation-name: rollIn;
+    animation-duration: 4s;
     
 }
 
+ul li {display: inline-block;}
+ul li:hover {width: 320px}
+ul li:hover ul {display: block;}
+
+
+@-webkit-keyframes pulse {
+  from {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+
+  50% {
+    -webkit-transform: scale3d(1.05, 1.05, 1.05);
+    transform: scale3d(1.05, 1.05, 1.05);
+  }
+
+  to {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
 }
 
+@keyframes pulse {
+  from {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+
+  50% {
+    -webkit-transform: scale3d(1.05, 1.05, 1.05);
+    transform: scale3d(1.05, 1.05, 1.05);
+  }
+
+  to {
+    -webkit-transform: scale3d(1, 1, 1);
+    transform: scale3d(1, 1, 1);
+  }
+}
+
+.pulse {
+  -webkit-animation-name: pulse;
+  animation-name: pulse;
+}
+}
+
+.hinge {
+  -webkit-animation-name: hinge;
+  animation-name: hinge;
+}
+
+/* originally authored by Nick Pettit - https://github.com/nickpettit/glide */
+
+@-webkit-keyframes rollIn {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(-100%, 0, 0) rotate3d(0, 0, 1, -120deg);
+    transform: translate3d(-100%, 0, 0) rotate3d(0, 0, 1, -120deg);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+@keyframes rollIn {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(-100%, 0, 0) rotate3d(0, 0, 1, -120deg);
+    transform: translate3d(-100%, 0, 0) rotate3d(0, 0, 1, -120deg);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+.rollIn {
+  -webkit-animation-name: rollIn;
+  animation-name: rollIn;
+}
 
 /********************
 MEDIA QUERIES
