--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,7 @@ img {
     padding: 10px;
 }
 body {
+    background-image: url('../../images/image.png');
     background-image: url("/img/wild_oliva.png");
 }
 
