--- a/css/styles.css
+++ b/css/styles.css
@@ -31,13 +31,8 @@ img {
     padding: 10px;
 }
 body {
-<<<<<<< HEAD
     
-    background-image: url("https://github.com/ehuesca5/Name-plate/blob/gh-pages/img/wild_oliva.png?raw=true");
-=======
-    background-image: url('https://github.com/ehuesca5/Name-plate/blob/gh-pages/img/wild_oliva.png?raw=true');
-    
->>>>>>> origin/gh-pages
+    background-image: url(https://github.com/ehuesca5/Name-plate/blob/gh-pages/img/wild_oliva.png?raw=true);
 }
 
 h1, h3, p, title  {
